[cloud animation] improve safari animation choppiness and fix overflow bug

--- a/src/about/About.scss
+++ b/src/about/About.scss
@@ -58,7 +58,9 @@ div#about-page {
             > section {
                 background-color: transparent;
                 bottom: 0;
+                height: 680px;
                 left: 0;
+                overflow: hidden;
                 position: absolute;
                 right: 0;
                 top: 0;
