--- a/src/about/Cloud.scss
+++ b/src/about/Cloud.scss
@@ -2,11 +2,14 @@
 
 div.cloud {
     position: absolute;
+    z-index: 100;
 
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
+    -moz-transition: left 0.2s ease-in-out;
+    -o-transition: left 0.2s ease-in-out;
+    -webkit-transition: left 0.2s ease-in-out;
+    transition: left 0.2s ease-in-out;
+
+    -webkit-transform: translate3d(0, 0, 0);
 
     > div {
         background: #f2f9fe;
@@ -16,7 +19,6 @@ div.cloud {
         height: 120px;
         position: relative;
         width: 320px;
-        z-index: 101;
 
         > span {
             border-radius: 50%;
@@ -24,7 +26,6 @@ div.cloud {
             box-shadow: 0px 0px 28px 4px rgba(42, 42, 42, 0.42);
             position: absolute;
             width: 100%;
-            z-index: 100;
         }
     }
 }
